--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,8 @@
-DB_HOST=localhost
+HOST=0.0.0.0
+DB_HOST=0.0.0.0
 DB_PORT=5432
 DB_NAME=doggr
 DB_USER=doggr
 DB_PASS=doggr
+BACKEND_PORT=8080
+ADMIND_PASS=admin
