--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,9 @@
-HOST=0.0.0.0
-DB_HOST=0.0.0.0
+DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=doggr
 DB_USER=doggr
 DB_PASS=doggr
-BACKEND_PORT=8080
-ADMIND_PASS=admin
+HOST=localhost
+PORT=8080
+PASSWORD=password
+NODE_ENV=[development|production]
