--- a/backend/package.json
+++ b/backend/package.json
@@ -37,16 +37,21 @@
 		"db:reset": "Completely updates our database to match our source code"
 	},
 	"dependencies": {
+		"@fastify/cors": "^8.2.1",
+		"@fastify/jwt": "^7.0.0",
+		"@fastify/multipart": "^7.6.0",
 		"@mikro-orm/core": "5.7.2",
 		"@mikro-orm/migrations": "5.7.2",
 		"@mikro-orm/postgresql": "5.7.2",
 		"@mikro-orm/reflection": "5.7.2",
 		"@mikro-orm/seeder": "5.7.2",
 		"axios": "^1.4.0",
+		"bcrypt": "^5.1.0",
 		"dotenv": "^16.0.3",
 		"fastify": "^4.15.0",
 		"fastify-plugin": "^4.5.0",
-		"mikro-orm-soft-delete": "^0.1.0"
+		"mikro-orm-soft-delete": "^0.1.0",
+		"minio": "^7.1.1"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^7.6.0",
