--- a/python_backend/Dockerfile
+++ b/python_backend/Dockerfile
@@ -5,6 +5,9 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 COPY requirements.txt /app/
 RUN pip install -r requirements.txt
+RUN pip install django-cors-headers
+RUN pip install asyncpg
+
 COPY . /app/
 
 EXPOSE 8000
